--- a/src/pixie/pixie.csproj
+++ b/src/pixie/pixie.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="System.Numerics.Tensors" Version="0.1.0-e171005-2" />
+  </ItemGroup>
 </Project>
